--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.datasource.password =
 spring.jpa.hibernate.ddl-auto= update
 # spring.jpa.hibernate.ddl-auto= create-drop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MYSQL5Dialect
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.thymeleaf.check-template-location=true
-spring.thymeleaf.prefix=classpath:/templates/
+# spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
